# apps/auth-service/src/controller/auth.controller.ts
@@ -8,7 +8,10 @@ import {
   verifyOtp,
 } from '../utils/auth.helper';
 import prisma from '@packages/libs/prisma';
-import { ValidationError } from '@packages/error-handler';
+import { AuthError, ValidationError } from '@packages/error-handler';
+
+import jwt from 'jsonwebtoken';
+import { setCookie } from '../utils/cookies/setCookie';
 
 // Rigister a new user
 export const userRegisteration = async (
@@ -81,6 +84,61 @@ export const verifyUser = async (
     res.status(201).json({
       success: true,
       message: 'User registered successfully!',
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// login user
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+
+    if (!email || !password) {
+      return next(new ValidationError('Email and password are required!'));
+    }
+
+    const user = await prisma.users.findUnique({ where: { email } });
+
+    if (!user) return next(new AuthError("User doesn't exists!"));
+
+    // verify password
+    const isMatch = await bcrypt.compare(password, user.password!);
+
+    if (!isMatch) {
+      return next(new AuthError('Invalid email or password'));
+    }
+
+    // Generate access and refresh token
+
+    const accessToken = jwt.sign(
+      { id: user.id, role: 'user' },
+      process.env.JWT_TOKEN_SECRET as string,
+      {
+        expiresIn: '15m',
+      }
+    );
+
+    const refreshToken = jwt.sign(
+      { id: user.id, role: 'user' },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      {
+        expiresIn: '7d',
+      }
+    );
+
+    // store the refresh and access token in token in an httpOnly secure cookie
+    setCookie(res, 'refresh_token', refreshToken);
+    setCookie(res, 'access_token', accessToken);
+
+    res.status(200).json({
+      message: 'Login successfull !',
+      user: { id: user.id, email: user.email, name: user.name },
     });
   } catch (error) {
     return next(error);
