# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,14 @@
 import express, { Router } from 'express';
-import { userRegisteration, verifyUser } from '../controller/auth.controller';
+import {
+  loginUser,
+  userRegisteration,
+  verifyUser,
+} from '../controller/auth.controller';
 
 const router: Router = express.Router();
 
 router.post('/user-registeration', userRegisteration);
 router.post('/verify-user', verifyUser);
+router.post('/login-user', loginUser);
 
 export default router;
